assets/css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    scroll-behavior: smooth;
}

body {
    background-color: #fff !important;
}

header {
    background-color: #fff !important;
    margin: 0;
    padding: 0px 0 15px 0;
    font-family: 'Montserrat', sans-serif;
    text-transform: uppercase;
}

header h1 {
    font-weight: bold;
    font-size: 36px;
    padding-left: 25px;
}

.navbar-nav {
    padding-top: 18px;
}

.navbar-brand {
    font-size: 40px !important; 
}

.card-body {
    background-color: #f8f5f2;
}

header a {
    text-decoration: none !important;
    color: #000;
}

a, a:hover, a:focus, a:active {
    text-decoration:none !important;
    color: black !important;
}

nav {
    margin-right: 80px;
}

nav ul {
    list-style: none;
}

nav ul a {
    position: relative;
    display: block;
    cursor: pointer;
}

nav ul a:before, a:after {
    content: '';
    position: absolute;
    width: 0%;
    height: 1px;
    top: 50%;
    margin-top: -0.5px;
    background: #000;
}

nav ul a:before {
    left: -2.5px;
}

nav ul a:after {
    right: 2.5px;
    background: #000;
    transition: width 0.8s cubic-bezier(0.22, 0.61, 0.36, 1);
}

nav ul a:hover:before {
    background: #000;
    width: 100%;
    transition: width 0.5s cubic-bezier(0.22, 0.61, 0.36, 1);
}

nav ul a:hover:after {
    background: transparent;
    width: 100%;
    transition: 0s;
}

#contact ul {
    list-style: none;
}

.about-me-title {
    border-bottom: 1px solid #000;
    font-family: sans-serif
}

.work-title {
    border-bottom: 1px solid #000;
}

.contact-me-title {
    border-bottom: 1px solid #000;
}

.contact-info a {
    padding-bottom: 3px;
    border-bottom: 3px solid #000;
    color: #000;
}

.row {
    margin-right: 0 !important;
    margin-left: 0 !important;
}

.card-img {
    width: 100%;
    height: 25vw;
    object-fit: cover;
}

#about p {
    margin-left: 35px;
}

.contact ul li a:hover {
    text-decoration: none !important;
}

.offcanvas-header {
    display: none;
}

@media (max-width: 992px) {
    header h1 a{
        font-size: 40px !important;
    }

    .offcanvas-header {
        display: block;
    }

    .navbar-collapse {
        position: fixed;
        top: 0;
        bottom: 0;
        left: 100%;
        width: 100%;
        padding-right: 1rem;
        padding-left: 1rem;
        overflow-y: auto;
        visibility: hidden;
        background-color: black;
        transition: visibility .2s ease-in-out, -webkit-transform .2s ease-in-out;
        z-index: 99999
    }

    .navbar-collapse.show {
        visibility: visible;
        transform: translateX(-100%);
    }

    .navbar-toggler {
        z-index: 99998;
        background-color: #000 !important;
    }

    .navbar-nav li a {
        color: white !important;
    }
}

@media (max-width: 576px) {
    header h1 {
        padding-left: 0;
    }

    header h1 a {
        font-size: 40px !important;
    }

    .navbar-brand {
        margin-left: 0;
    }

    .navbar-toggler {
        margin-left: 0px;
    }

    #about-me {
        padding-left: 10px !important;
        padding-right: 10px !important;
    }

    #work {
        padding-left: 10px !important;
        padding-right: 10px !important;
    }

    #contact {
        padding-left: 10px !important;
        padding-right: 10px !important;
    }
}

